--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,7 +20,7 @@ a:visited {
             <article>
               <header></header>
             </article>
-          Selected Publications (<a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>,<a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
+          Selected Publications (Full Publications:&nbsp; <a href="https://scholar.google.com/citations?user=qdPVJN0AAAAJ&amp;hl=zh-CN">Google Scholar</a>, <a href="https://dblp.uni-trier.de/pers/w/Wang:Qilong.html">DBLP</a>) </h1>
         </section></h1>
   </header>
     </article>
@@ -75,7 +75,7 @@ a:visited {
         <ol>
 		  <li>
             <div align="justify">
-              <div align="justify">Bowen Dong, Zitong Huang, Yuelin Guo, <strong>Qilong Wang</strong>, Zhenxing Niu, Wangmeng Zuo. Boosting Weakly Supervised Object Detection via Learning Bounding Box Adjusters. 18th IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2021. </div>
+              <div align="justify">Bowen Dong, Zitong Huang, Yuelin Guo, <strong>Qilong Wang</strong>, Zhenxing Niu, Wangmeng Zuo. Boosting Weakly Supervised Object Detection via Learning Bounding Box Adjusters. 18th IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2021. [<a href="https://arxiv.org/abs/2108.01499">arXiv</a>][<a href="https://github.com/DongSky/lbba_boosted_wsod">Code</a>] </div>
             </div>
           </li>
 		  <li>
@@ -89,7 +89,7 @@ a:visited {
             </div>
           </li>
           <li>
-            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_ECA-Net_Efficient_Channel_Attention_for_Deep_Convolutional_Neural_Networks_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>] [<a href="https://github.com/BangguWu/ECANet">Code</a>]</div>
+            <div align="justify"><strong>Qilong Wang</strong>, <span data-bind="text: fullName, style:{fontWeight: isPrimary ? 'bold' : ''}">Banggu Wu,</span> Pengfei Zhu, Peihua Li, Wangmeng Zuo, Qinghua Hu. ECA-Net: Efficient Channel Attention for Deep Convolutional Neural Networks. 33th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2020.[<a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Wang_ECA-Net_Efficient_Channel_Attention_for_Deep_Convolutional_Neural_Networks_CVPR_2020_paper.pdf">PDF</a>][<a href="https://arxiv.org/abs/1910.03151">arXiv</a>][<a href="https://github.com/BangguWu/ECANet">Code</a>] <em>(Most influential CVPR papers recommended by Paper Digest)</em></div>
           </li>
           <li>
             <div align="justify"><strong>Qilong Wang</strong>, Peihua Li, Qinghua Hu, Pengfei Zhu, Wangmeng Zuo. Deep Global Generalized Gaussian Networks. 32th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2019. [<a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Deep_Global_Generalized_Gaussian_Networks_CVPR_2019_paper.pdf">PDF</a>] [<a href="https://github.com/csqlwang/3G-Net">Code</a>]</div>
