--- a/_includes/acdserve.html
+++ b/_includes/acdserve.html
@@ -13,9 +13,9 @@
         <p><br />
         <strong>Conference Reviewer</strong><br />
         </p>
-        <p>CVPR 2018-2021, ICCV 2019 2021, ICML 2021, ICLR 2021 2022, NeurIPS 2020 2021, ECCV 2020 </p>
+        <p>CVPR 2018-2022, ICCV 2019 2021, ICML 2021, ICLR 2021 2022, NeurIPS 2020 2021, ECCV 2020 </p>
         <p>PC for AAAI 2019-2021, IJCAI 2019 2020</p>
-        <p>SPC for IJCAI 2021</p>
+        <p>SPC for IJCAI 2021, SPC for AAAI 2022</p>
         <p>
         <article></article>
         </p>
