--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -51,7 +51,14 @@ a:visited {
       <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>T-PAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
+            <div align="justify">Peihua Li, <strong>Qilong Wang</strong>, Hui Zeng and Lei Zhang.  Local Log-Euclidean Multivariate Gaussian Descriptor and Its Application to  Image Classification. <strong>IEEE</strong> <strong>T-PAMI</strong> 39(4): 803-817, 2017. [<a href="http://www.peihuali.org/publications/L2EMG/TPAMI_L2EMG.pdf">PDF</a>][<a href="http://www.peihuali.org/publications/L2EMG/PAMI_ReleaseCodes_fin_v0.zip">Code</a>]</div>
+          </div>
+        </div>
+      </li>
+	   <li>
+        <div align="justify">
+          <div align="justify">
+            <div align="justify">Tianqi Ma, <strong>Qilong Wang</strong>*, Hongzhi Zhang, Wangmeng Zuo.  Delving Deeper into Pixel Prior for Box-Supervised Semantic Segmentation. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][Code] (*The corresponding author.)</div>
           </div>
         </div>
       </li>
@@ -60,11 +67,11 @@ a:visited {
           </div>
       </li>
       <li><div align="justify">
-          <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE T-IP</strong> 26(7): 3372<span _ngcontent-c10="">-3384</span>,  2017. [<a href="https://ieeexplore.ieee.org/document/7904668">PDF</a>] [<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
+          <div align="justify">Peihua  Li, Hui Zeng, <strong>Qilong Wang</strong>, Simon C.  K. Shiu, Lei Zhang. High-order Local Pooling and Encoding Gaussians over A  Dictionary of Gaussians. <strong>IEEE T-IP</strong> 26(7): 3372<span _ngcontent-c10="">-3384</span>,  2017. [<a href="https://ieeexplore.ieee.org/document/7904668">PDF</a>][<a href="http://www.peihuali.org/publications/HO-LP/HO-LP_Demo_FMD.zip">Code</a>] </div>
           </div>
       </li>
       <li><div align="justify">
-          <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>] [<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>]
+          <div align="justify"><strong>Qilong Wang</strong>,  Peihua Li, Wangmeng Zuo, Lei Zhang. Towards Effective Codebookless Model for  Image Classification. <strong>Pattern  Recognition</strong> 59: 63-71, 2016. [<a href="http://www.peihuali.org/publications/PR-CLM/PR-CLM.pdf">PDF</a>][<a href="http://www.peihuali.org/publications/PR-CLM/CLM_PR.zip">Code</a>]
             <div align="justify"></div>
           </div>
           </div>
@@ -73,6 +80,11 @@ a:visited {
         <p align="justify">&nbsp;</p>
         <p><strong>Conference Papers </strong></p>
         <ol>
+			<li>
+            <div align="justify">
+              <div align="justify">	Zilin Gao, <strong>Qilong Wang</strong>, Bingbing Zhang, Qinghua Hu, Peihua Li. Temporal-attentive Covariance Pooling Networks for Video Recognition. Thirty-fifth Conference on Neural Information Processing Systems (<strong>NeurIPS </strong>), 2021. [<a href="https://proceedings.neurips.cc/paper/2021/hash/70efdf2ec9b086079795c442636b55fb-Abstract.html">PDF</a>][<a href="https://github.com/ZilinGao/Temporal-attentive-Covariance-Pooling-Networks-for-Video-Recognition">Code</a>] </div>
+            </div>
+          </li>
 		  <li>
             <div align="justify">
               <div align="justify">Bowen Dong, Zitong Huang, Yuelin Guo, <strong>Qilong Wang</strong>, Zhenxing Niu, Wangmeng Zuo. Boosting Weakly Supervised Object Detection via Learning Bounding Box Adjusters. 18th IEEE International Conference on Computer Vision (<strong>ICCV</strong>), 2021. [<a href="https://arxiv.org/abs/2108.01499">arXiv</a>][<a href="https://github.com/DongSky/lbba_boosted_wsod">Code</a>] </div>
