--- a/_includes/updates.html
+++ b/_includes/updates.html
@@ -30,6 +30,8 @@
     <h1 class="STYLE4"><span class="STYLE14">News!</span>    </h1>
     <address>
     <p class="STYLE16">&nbsp;</p>
+	<p><em>[2021-12-24] One paper is accepted to IEEE T-IP.</em></p>
+	<p><em>[2021-09-29] One paper is accepted to NeurIPS 2021.</em></p>
     <p><em>[2021-07-27] One paper is accepted to ICCV 2021.</em></p>
     <p><em>[2021-03-27] One paper is accepted to CVPR 2021.</em></p>
 <p><em>[2020-09-15]
