--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,7 +31,7 @@ a:visited {
 <ol>
           <li><div align="justify"><div align="justify">
             <div align="justify">
-                  <div align="justify">Jiangtao Xie, Ruiren Zeng, <strong>Qilong Wang</strong>, Ziqi Zhou, Peihua Li. So-ViT: Mind Visual Tokens for Vision Transformer. CoRR abs/2104.10935, 2021. [<a href="https://arxiv.org/abs/2104.10935">arXiv</a>][<a href="https://github.com/jiangtaoxie/So-ViT">Code</a>]&nbsp;<em>(We make an attempt to exploit visual tokens of vision Transformer by using second-order pooling for&nbsp; effective visual classification.)</em></div>
+                  <div align="justify">Jiangtao Xie, Ruiren Zeng, <strong>Qilong Wang</strong>, Ziqi Zhou, Peihua Li. So-ViT: Mind Visual Tokens for Vision Transformer. CoRR abs/2104.10935, 2021. [<a href="https://arxiv.org/abs/2104.10935">arXiv</a>][<a href="https://github.com/jiangtaoxie/So-ViT">Code</a>]&nbsp;<em>(We make an attempt to exploit visual tokens of vision Transformer by using second-order pooling for&nbsp; effective visual classification)</em></div>
             </div>
               </div>
           </div>
