--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -62,6 +62,13 @@ a:visited {
           </div>
         </div>
       </li>
+	  <li>
+        <div align="justify">
+          <div align="justify">
+            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][Code] </div>
+          </div>
+        </div>
+      </li>
       <li><div align="justify">
           <div align="justify"><strong>Qilong Wang</strong>,  Xiaoxiao Lu, Peihua Li, Zhenguo Gao, Yongri Piao. An Information Geometry Based  Distance between High-dimensional Covariances for Scalable Classification. <strong>IEEE T-CSVT</strong> 28(10): 2449<span _ngcontent-c10="">-2459</span>, 2018. [<a href="https://ieeexplore.ieee.org/document/7942127/">PDF</a>] </div>
           </div>
@@ -80,6 +87,11 @@ a:visited {
         <p align="justify">&nbsp;</p>
         <p><strong>Conference Papers </strong></p>
         <ol>
+			<li>
+            <div align="justify">
+              <div align="justify">	Jiangtao Xie, Fei Long, Jiaming Lv, <strong>Qilong Wang</strong>, Peihua Li. Joint Distribution Matters: Deep Brownian Distance Covariance for Few-Shot Classification. 35th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022. [PDF][<a href="http://www.peihuali.org/DeepBDC">Code</a>] </div>
+            </div>
+          </li>
 			<li>
             <div align="justify">
               <div align="justify">	Zilin Gao, <strong>Qilong Wang</strong>, Bingbing Zhang, Qinghua Hu, Peihua Li. Temporal-attentive Covariance Pooling Networks for Video Recognition. Thirty-fifth Conference on Neural Information Processing Systems (<strong>NeurIPS </strong>), 2021. [<a href="https://proceedings.neurips.cc/paper/2021/hash/70efdf2ec9b086079795c442636b55fb-Abstract.html">PDF</a>][<a href="https://github.com/ZilinGao/Temporal-attentive-Covariance-Pooling-Networks-for-Video-Recognition">Code</a>] </div>
