--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -58,14 +58,14 @@ a:visited {
 	   <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Tianqi Ma, <strong>Qilong Wang</strong>*, Hongzhi Zhang, Wangmeng Zuo.  Delving Deeper into Pixel Prior for Box-Supervised Semantic Segmentation. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][Code] (*The corresponding author)</div>
+            <div align="justify">Tianqi Ma, <strong>Qilong Wang</strong>*, Hongzhi Zhang, Wangmeng Zuo.  Delving Deeper into Pixel Prior for Box-Supervised Semantic Segmentation. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (31):1406-1417. [<a href="https://ieeexplore.ieee.org/document/9684236">PDF</a>][Code] (*The corresponding author)</div>
           </div>
         </div>
       </li>
 	  <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][Code] </div>
+            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][<a href="https://github.com/Hwang64/CrabNet">Code</a>] </div>
           </div>
         </div>
       </li>
