--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -58,14 +58,14 @@ a:visited {
 	   <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Tianqi Ma, <strong>Qilong Wang</strong>*, Hongzhi Zhang, Wangmeng Zuo.  Delving Deeper into Pixel Prior for Box-Supervised Semantic Segmentation. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (31):1406-1417. [<a href="https://ieeexplore.ieee.org/document/9684236">PDF</a>][Code] (*The corresponding author)</div>
+            <div align="justify">Tianqi Ma, <strong>Qilong Wang</strong>*, Hongzhi Zhang, Wangmeng Zuo.  Delving Deeper into Pixel Prior for Box-Supervised Semantic Segmentation. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (31):1406-1417. [<a href="https://ieeexplore.ieee.org/document/9684236">PDF</a>][<a href="https://github.com/matq-hit/PIP">Code</a>] (*The corresponding author)</div>
           </div>
         </div>
       </li>
 	  <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [PDF][<a href="https://github.com/Hwang64/CrabNet">Code</a>] </div>
+            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [<a href="https://ieeexplore.ieee.org/document/9745346">PDF</a>][<a href="https://github.com/Hwang64/CrabNet">Code</a>] </div>
           </div>
         </div>
       </li>
@@ -89,7 +89,7 @@ a:visited {
         <ol>
 			<li>
             <div align="justify">
-              <div align="justify">	Jiangtao Xie, Fei Long, Jiaming Lv, <strong>Qilong Wang</strong>, Peihua Li. Joint Distribution Matters: Deep Brownian Distance Covariance for Few-Shot Classification. 35th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022. [PDF][<a href="http://www.peihuali.org/DeepBDC">Code</a>] </div>
+              <div align="justify">	Jiangtao Xie, Fei Long, Jiaming Lv, <strong>Qilong Wang</strong>, Peihua Li. Joint Distribution Matters: Deep Brownian Distance Covariance for Few-Shot Classification. 35th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022. [<a href="https://arxiv.org/abs/2204.04567">PDF</a>][<a href="https://github.com/Fei-Long121/DeepBDC">Code</a>] </div>
             </div>
           </li>
 			<li>
