--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -65,7 +65,7 @@ a:visited {
 	  <li>
         <div align="justify">
           <div align="justify">
-            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (Accept). [<a href="https://ieeexplore.ieee.org/document/9745346">PDF</a>][<a href="https://github.com/Hwang64/CrabNet">Code</a>] </div>
+            <div align="justify">Hao Wang, <strong>Qilong Wang</strong>, Hongzhi Zhang, Qinghua Hu, Wangmeng Zuo.  CrabNet: Fully Task-Specific Feature Learning for One-Stage Object Detection. <strong>IEEE</strong> <strong>T-IP</strong>, 2022 (31):2962-2974. [<a href="https://ieeexplore.ieee.org/document/9745346">PDF</a>][<a href="https://github.com/Hwang64/CrabNet">Code</a>] </div>
           </div>
         </div>
       </li>
