--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -89,12 +89,17 @@ a:visited {
         <ol>
 			<li>
             <div align="justify">
+              <div align="justify">	<strong>Qilong Wang</strong>, Mingze Gao, Zhaolin Zhang, Jiangtao Xie, Peihua Li, Qinghua Hu. DropCov: A Simple yet Effective Method for Improving Deep Architectures. Thirty-sixth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2022. [PDF][Code] </div>
+            </div>
+          </li>
+			<li>
+            <div align="justify">
               <div align="justify">	Jiangtao Xie, Fei Long, Jiaming Lv, <strong>Qilong Wang</strong>, Peihua Li. Joint Distribution Matters: Deep Brownian Distance Covariance for Few-Shot Classification. 35th  IEEE Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2022. [<a href="https://arxiv.org/abs/2204.04567">PDF</a>][<a href="https://github.com/Fei-Long121/DeepBDC">Code</a>] </div>
             </div>
           </li>
 			<li>
             <div align="justify">
-              <div align="justify">	Zilin Gao, <strong>Qilong Wang</strong>, Bingbing Zhang, Qinghua Hu, Peihua Li. Temporal-attentive Covariance Pooling Networks for Video Recognition. Thirty-fifth Conference on Neural Information Processing Systems (<strong>NeurIPS </strong>), 2021. [<a href="https://proceedings.neurips.cc/paper/2021/hash/70efdf2ec9b086079795c442636b55fb-Abstract.html">PDF</a>][<a href="https://github.com/ZilinGao/Temporal-attentive-Covariance-Pooling-Networks-for-Video-Recognition">Code</a>] </div>
+              <div align="justify">	Zilin Gao, <strong>Qilong Wang</strong>, Bingbing Zhang, Qinghua Hu, Peihua Li. Temporal-attentive Covariance Pooling Networks for Video Recognition. Thirty-fifth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), 2021. [<a href="https://proceedings.neurips.cc/paper/2021/hash/70efdf2ec9b086079795c442636b55fb-Abstract.html">PDF</a>][<a href="https://github.com/ZilinGao/Temporal-attentive-Covariance-Pooling-Networks-for-Video-Recognition">Code</a>] </div>
             </div>
           </li>
 		  <li>
